--- a/view/resources.html
+++ b/view/resources.html
@@ -1,4 +1,4 @@
-<h2 style="text-align: left">BIBLE STUDY RESOURCES </h2>
+<h2 class="section-header"><span class="content-header wow fadeIn " data-wow-delay="0.2s" data-wow-duration="2s">BIBLE STUDY RESOURCES</span></h2>
 
 <div>
     <table class="table table-hover">
