--- a/view/template/left-view-column.html
+++ b/view/template/left-view-column.html
@@ -1,9 +1,9 @@
 <div layout="column">
-    <div flex style="border: thin dotted">
+    <div flex style="background-color: #F6F7F7">
         <table style="margin:5%">
             <thead class="thead-inverse">
             <tr>
-                <td colspan="2" class="text-center"><b>Worship And class Times</b></td>
+                <td colspan="2" class="text-center"><h4 class="section-header"><span class="content-header wow fadeIn " data-wow-delay="0.2s" data-wow-duration="2s"> Worship and class times</span></h4></td>
             </tr>
             </thead>
             <tbody>
@@ -28,7 +28,7 @@
     </div>
     <div flex>
         <br>
-        <p><strong>We are here every sunday</strong></p>
+        <h4 class="section-header"><span class="content-header wow fadeIn " data-wow-delay="0.2s" data-wow-duration="2s"> We are here every sunday</span></h4>
         <p><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d621.3232453415965!2d-0.028855470785451
             757!3d51.47113493411288!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4876025f3e830817%3A0x592ddcceacb
             a384!2s22+Lucas+St%2C+London+SE8+4QG!5e0!3m2!1sen!2suk!4v1473449094069"
