--- a/view/about.html
+++ b/view/about.html
@@ -1,6 +1,6 @@
 <div layout="column">
     <div  style="padding-bottom: 4%; border-bottom: solid #4b4f49; text-align: left">
-        <h3>About us</h3>
+        <h3 class="section-header"><span class="content-header wow fadeIn " data-wow-delay="0.2s" data-wow-duration="2s">About us</span></h3>
         <p> <img src="img/about-us-icon.png">
 
        The church of Christ, as in the Bible, reached the Lewisham area in 1994. In line with the aim of our Lord and
@@ -16,7 +16,7 @@
     </div>
 
     <div  style="padding: 4%; border-bottom: solid #4b4f49; text-align: left">
-        <h3>Why we are called the church of Christ</h3>
+        <h3 class="section-header"><span class="content-header wow fadeIn " data-wow-delay="0.2s" data-wow-duration="2s">Why we are called the church of Christ</span></h3>
         <p><img src="img/why_us.jpeg">
         The Biblical term "Church of Christ" is used to describe exactly who we are and who we belong to, namely Christ.
         This Divine name was first used by the Saviour Himself, when He said, "Upon this rock I will build my Church",
@@ -25,7 +25,7 @@
         </p>
     </div>
     <div  style="padding: 4%; text-align: left">
-        <h3>You are welcome to visit us</h3>
+        <h3 class="section-header"><span class="content-header wow fadeIn " data-wow-delay="0.2s" data-wow-duration="2s">You are welcome to visit us</span></h3>
         <p><img src="img/welcome.png">
             Psalm 34:8 "Taste and see that the LORD is good; blessed is the one who takes refuge in him".
             Everybody is welcome to fellowship with us. We are one family of God, where everyone join to worship as one. If
