--- a/view/home.html
+++ b/view/home.html
@@ -1,16 +1,16 @@
 <div >
         <div style="text-align: left">
-            <p class="normal">
-            <b>"Salvation comes through a cross and a crucified Jesus."</b>
-            </p>
-            <p>
+            <div class="section-content">
+                <h1 class="section-header"><span class="content-header wow fadeIn " data-wow-delay="0.2s" data-wow-duration="2s"> Salvation comes through a cross and a crucified Jesus.</span></h1>
+            </div>
+            <div>
                 We are a warm group of Christians who are striving to worship God in the same way that the first century
                 Christians did.
                 <p>In this way we are striving to continue the divine unity that Jesus prayed for (John 17v 21).
             The church of Christ has congregations throughout the United Kingdom and all over the world. However we
             have no central organization on earth, but we have a common cause: to be the Church as it was when first
             instituted by the Lord Jesus Christ.
-            </p>
+            </div>
 
         </p>
         </div>
@@ -32,7 +32,7 @@
 <div layout="column" style="padding-top: 4%">
 
     <div  style="border-bottom: solid #4b4f49; text-align: left">
-        <h3>God's Word For The Week</h3>
+        <h3 class="section-header"><span class="content-header wow fadeIn " data-wow-delay="0.2s" data-wow-duration="2s">God's Word For The Week</span></h3>
     </div>
     <div>
         <table class="thead-inverse">
