--- a/view/home.html
+++ b/view/home.html
@@ -4,8 +4,9 @@
                 <h1 class="section-header"><span class="content-header wow fadeIn " data-wow-delay="0.2s" data-wow-duration="2s"> Salvation comes through a cross and a crucified Jesus.</span></h1>
             </div>
             <div>
-                We are a warm group of Christians who are striving to worship God in the same way that the first century
+               <p> We are a warm group of Christians who are striving to worship God in the same way that the first century
                 Christians did.
+               </p>
                 <p>In this way we are striving to continue the divine unity that Jesus prayed for (John 17v 21).
             The church of Christ has congregations throughout the United Kingdom and all over the world. However we
             have no central organization on earth, but we have a common cause: to be the Church as it was when first
@@ -32,13 +33,34 @@
 <div layout="column" style="padding-top: 4%">
 
     <div  style="border-bottom: solid #4b4f49; text-align: left">
-        <h3 class="section-header"><span class="content-header wow fadeIn " data-wow-delay="0.2s" data-wow-duration="2s">God's Word For The Week</span></h3>
+        <h3 class="section-header"><span class="content-header wow fadeIn " data-wow-delay="0.2s" data-wow-duration="2s">Recent Sermons</span></h3>
     </div>
-    <div>
-        <table class="thead-inverse">
-            <tr ng-repeat="m in messages">
-                <td>{{m.id}}</td>
-                <td>{{m.street}}</td>
+    <div style="background-color: #ffffff">
+        <table class="thead-inverse" style="text-align: left">
+            <!--<tr ng-repeat="m in messages">-->
+                <!--<td>{{m.id}}</td>-->
+                <!--<td>-->
+                    <!--<audio controls="controls" preload="none"  controlsList="nodownload ">-->
+                        <!--<source src="https://s3-eu-west-1.amazonaws.com/lewishamcoc/OSCES.mp3">-->
+                        <!--<source src="../audio/OSCES.ogg" type="audio/ogg">-->
+                        <!--Your browser does not support the audio element.-->
+                    <!--</audio>-->
+                <!--</td>-->
+            <!--</tr>-->
+            <tr style="border-bottom: dotted">
+                <td>
+                    <!--<time datetime="2017-07-23"></time>-->
+                    <span><h4 style="line-height: 20%;  margin-bottom:-10px; font-size: 80%">Admitting our sins and confessing to God:</h4></span><br>
+                    <span><h4 style="line-height: 20%;  margin-bottom:-10px; font-size: 80%">by Br Johnson</h4></span><br>
+                    <span><h4 style="line-height: 20%;  margin-bottom:0px; font-size: 80%">23-07-2017</h4></span>
+                </td>
+                <td>
+                    <audio controls="controls" preload="none"  controlsList="nodownload ">
+                    <source src="http://localhost:63342/lewisham/audio/sunday_message_2017_07_23.mp3">
+                    <source src="../audio/OSCES.ogg" type="audio/ogg">
+                    Your browser does not support the audio element.
+                    </audio>
+                </td>
             </tr>
         </table>
     </div>
