--- a/view/template/left-view-column.html
+++ b/view/template/left-view-column.html
@@ -1,6 +1,6 @@
 <div layout="column">
-    <div flex style="background-color: #F6F7F7">
-        <table style="margin:5%">
+    <div flex style="background: linear-gradient(to left, #FEF5E7, #ffffff); background: -webkit-linear-gradient(to left, #FEF5E7, #ffffff)">
+        <table style="margin:5%; font-family: 'PT Sans', sans-serif;">
             <thead class="thead-inverse">
             <tr>
                 <td colspan="2" class="text-center"><h4 class="section-header"><span class="content-header wow fadeIn " data-wow-delay="0.2s" data-wow-duration="2s"> Worship and class times</span></h4></td>
@@ -24,6 +24,14 @@
                 <td>7:00  pm</td>
             </tr>
             </tbody>
+        </table>
+    </div>
+    <div flex>
+        <header><h4 class="section-header"><span class="content-header wow fadeIn " data-wow-delay="0.2s" data-wow-duration="2s"> Upcoming events</span></h4></header>
+        <table style="font-family: 'PT Sans', sans-serif; background: linear-gradient(to left, #FEF5E7, #ffffff); background: -webkit-linear-gradient(to left, #FEF5E7, #ffffff)">
+            <tr>
+                <td>No upcoming events have been scheduled.</td>
+            </tr>
         </table>
     </div>
     <div flex>
@@ -53,5 +61,4 @@
             <!--<label>Serve <br> With <br> Us</label>-->
         <!--</a>-->
     <!--</p>-->
-</div>
 </div>
