--- a/view/template/menu-template.html
+++ b/view/template/menu-template.html
@@ -9,7 +9,7 @@
     </button>
     <a class="navbar-brand" href="#!/home" ng-click="active='home'"  style="color: #ffffff"><label>Lewisham Church of christ</label></a>
 </div>
-<div id="navbar" class="navbar-collapse collapse">
+<div class="navbar-collapse collapse">
             <ul class="nav navbar-nav navbar-right">
                 <li ng-class="{active: url.path() == '/home' || url.path() == '/'}"><a href="#!/home" class="home" ng-click="active='home'"><strong>Home</strong></strong></a></li>
                 <li ng-class="{active: url.path() == '/about'}"><a href="#!/about" class="about " ng-click="active='about'"><strong>About</strong></a></li>
