--- a/view/template/left-view-column.html
+++ b/view/template/left-view-column.html
@@ -15,14 +15,14 @@
                 <td style="text-align: left">Sunday morning worship</td>
                 <td>12:00  pm</td>
             </tr>
-            <tr>
-                <td style="text-align: left">Sunday evening service </td>
-                <td>6:30  pm</td>
-            </tr>
-            <tr>
-                <td style="text-align: left">Thursday bible class</td>
-                <td>7:00  pm</td>
-            </tr>
+            <!--<tr>-->
+                <!--<td style="text-align: left">Sunday evening service </td>-->
+                <!--<td>6:30  pm</td>-->
+            <!--</tr>-->
+            <!--<tr>-->
+                <!--<td style="text-align: left">Thursday bible class</td>-->
+                <!--<td>7:00  pm</td>-->
+            <!--</tr>-->
             </tbody>
         </table>
     </div>
@@ -30,7 +30,7 @@
         <header><h4 class="section-header"><span class="content-header wow fadeIn " data-wow-delay="0.2s" data-wow-duration="2s"> Upcoming events</span></h4></header>
         <table style="font-family: 'PT Sans', sans-serif; background: linear-gradient(to left, #FEF5E7, #ffffff); background: -webkit-linear-gradient(to left, #FEF5E7, #ffffff)">
             <tr>
-                <td>No upcoming events have been scheduled.</td>
+                <td>No upcoming event.</td>
             </tr>
         </table>
     </div>
@@ -41,6 +41,35 @@
             757!3d51.47113493411288!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4876025f3e830817%3A0x592ddcceacb
             a384!2s22+Lucas+St%2C+London+SE8+4QG!5e0!3m2!1sen!2suk!4v1473449094069"
                    width="100%" height="300" frameborder="0" style="border:0" allowfullscreen></iframe></p>
+    </div>
+
+    <div flex  style="background: linear-gradient(to left, #FEF5E7, #ffffff); background: -webkit-linear-gradient(to left, #FEF5E7, #ffffff); text-align: left; padding: 5%">
+        <h3 class="section-header"><span class="content-header wow fadeIn " data-wow-delay="0.2s" data-wow-duration="2s">2017 summer campaign</span></h3>
+        <p><span>This years event was held on the 19th and 20th of August 2017</span></p>
+        <table style="margin:5%; font-family: 'PT Sans', sans-serif;">
+            <tbody>
+            <tr>
+                <td style="text-align: left">Day 1 lecture</td>
+                <td>
+                    <audio controls="controls" preload="none"  controlsList="nodownload" style="width: 100%">
+                        <source src="http://cts-network.co.za/audio/summer_campaign_1.mp3">
+                        <source src="http://cts-network.co.za/audio/summer_campaign_1.mp3" type="audio/ogg">
+                        Your browser does not support the audio element.
+                    </audio>
+                </td>
+            </tr>
+            <tr>
+                <td style="text-align: left">Day 2 Lecture</td>
+                <td>
+                    <audio controls="controls" preload="none"  controlsList="nodownload" style="width: 100%">
+                        <source src="http://cts-network.co.za/audio/summer_campaign_2.mp3">
+                        <source src="http://cts-network.co.za/audio/summer_campaign_2.mp3" type="audio/ogg">
+                        Your browser does not support the audio element.
+                    </audio>
+                </td>
+            </tr>
+            </tbody>
+        </table>
     </div>
 <!--<div flex>-->
     <!--<p>-->
