--- a/view/template/menu-template.html
+++ b/view/template/menu-template.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-default navbar-fixed-top" role="navigation" id="navBar">
     <div class="container">
 <div class="navbar-header">
-    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbarNavDropdown" aria-expanded="false" aria-controls="navbarNavDropdown">
         <span class="sr-only">Toggle navigation</span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
@@ -9,7 +9,7 @@
     </button>
     <a class="navbar-brand" href="#!/home" ng-click="active='home'"  style="color: #ffffff"><label>Lewisham Church of christ</label></a>
 </div>
-<div class="navbar-collapse collapse">
+<div class="navbar-collapse collapse" id="navbarNavDropdown">
             <ul class="nav navbar-nav navbar-right">
                 <li ng-class="{active: url.path() == '/home' || url.path() == '/'}"><a href="#!/home" class="home" ng-click="active='home'"><strong>Home</strong></strong></a></li>
                 <li ng-class="{active: url.path() == '/about'}"><a href="#!/about" class="about " ng-click="active='about'"><strong>About</strong></a></li>
