fixed table sizing issue

--- a/view/contact.html
+++ b/view/contact.html
@@ -73,7 +73,9 @@
    <!--</div>-->
 
     <div  style="border: thin dotted; margin-top: 3%">
-        <table>
+        <table style="margin:5%; font-family: 'PT Sans', sans-serif;">
+            <col width="25%">
+            <col width="75%">
             <thead class="thead-inverse">
             <tr>
                 <td colspan="2" class="text-center"><h3 style="text-align: left; color: #5e5e5e">Alternatively you can reach us by phone or email</h3></td>
@@ -86,7 +88,7 @@
             </tr>
             <tr>
                 <td><b>Email:</b></td>
-                <td> admin@lewishamchurchofchrist.co.uk</td>
+                <td>admin@lewishamchurchofchrist.co.uk</td>
             </tr>
             </tbody>
         </table>
