--- a/view/template/left-view-column.html
+++ b/view/template/left-view-column.html
@@ -1,6 +1,6 @@
 <div layout="column">
     <div flex style="background: linear-gradient(to left, #FEF5E7, #ffffff); background: -webkit-linear-gradient(to left, #FEF5E7, #ffffff)">
-        <table style="margin:5%; font-family: 'PT Sans', sans-serif;">
+        <table style="margin:5%; font-family: 'PT Sans', sans-serif">
             <thead class="thead-inverse">
             <tr>
                 <td colspan="2" class="text-center"><h4 class="section-header"><span class="content-header wow fadeIn " data-wow-delay="0.2s" data-wow-duration="2s"> Worship and class times</span></h4></td>
