Updated address to greenwich location

--- a/view/template/left-view-column.html
+++ b/view/template/left-view-column.html
@@ -36,10 +36,8 @@
     </div>
     <div flex>
         <br>
-        <h4 class="section-header"><span class="content-header wow fadeIn " data-wow-delay="0.2s" data-wow-duration="2s"> We are here every sunday</span></h4>
-        <p><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d621.3232453415965!2d-0.028855470785451
-            757!3d51.47113493411288!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4876025f3e830817%3A0x592ddcceacb
-            a384!2s22+Lucas+St%2C+London+SE8+4QG!5e0!3m2!1sen!2suk!4v1473449094069"
+        <h4 class="section-header"><span class="content-header wow fadeIn " data-wow-delay="0.2s" data-wow-duration="2s"><a href="https://www.communitycentresuk.com/community-centres/parkside/" target="_blank"> We are here every sunday </a></span></h4>
+        <p><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2485.259124442865!2d-0.016390084892591247!3d51.47175777962929!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x487602628e28a2e7%3A0x3cb92d1e17f6e225!2sCopperwood+Pl%2C+Greenwich%2C+London+SE10+8GD!5e0!3m2!1sen!2suk!4v1518905859330"
                    width="100%" height="300" frameborder="0" style="border:0" allowfullscreen></iframe></p>
     </div>
 
