Fixed bug in audio url

--- a/view/template/left-view-column.html
+++ b/view/template/left-view-column.html
@@ -50,8 +50,8 @@
                 <td style="text-align: left">Day 1 lecture</td>
                 <td>
                     <audio controls="controls" preload="none"  controlsList="nodownload" style="width: 100%">
-                        <source src="http://cts-network.co.za/audio/summer_campaign_1.mp3">
-                        <source src="http://cts-network.co.za/audio/summer_campaign_1.mp3" type="audio/ogg">
+                        <source src="http://lewishamchurchofchrist.co.uk/audio/summer_campaign_1.mp3">
+                        <source src="http://lewishamchurchofchrist.co.uk/audio/summer_campaign_1.mp3" type="audio/ogg">
                         Your browser does not support the audio element.
                     </audio>
                 </td>
@@ -60,8 +60,8 @@
                 <td style="text-align: left">Day 2 Lecture</td>
                 <td>
                     <audio controls="controls" preload="none"  controlsList="nodownload" style="width: 100%">
-                        <source src="http://cts-network.co.za/audio/summer_campaign_2.mp3">
-                        <source src="http://cts-network.co.za/audio/summer_campaign_2.mp3" type="audio/ogg">
+                        <source src="http://lewishamchurchofchrist.co.uk/audio/summer_campaign_2.mp3">
+                        <source src="http://lewishamchurchofchrist.co.uk/audio/summer_campaign_2.mp3" type="audio/ogg">
                         Your browser does not support the audio element.
                     </audio>
                 </td>
