--- a/view/home.html
+++ b/view/home.html
@@ -48,10 +48,8 @@
                 <td>{{sermon.date}}</td>
                 <td>By: {{sermon.preacher}}</td>
                 <td>
-                    <audio controls="controls" preload="none"  controlsList="nodownload" style="width: 100%">
-                        <source src="{{sermon.audio_link_mp3}}">
-                        <source src="{{sermon.audio_link_ogg}}" type="audio/ogg">
-                        Your browser does not support the audio element.
+                    <audio src="{{sermon.audio_link_mp3}}" controls="controls" preload="none" style="width: 100%">
+
                     </audio>
                 </td>
             </tr>
