Changed email address

--- a/view/home.html
+++ b/view/home.html
@@ -48,8 +48,8 @@
                 <td>{{sermon.date}}</td>
                 <td>By: {{sermon.preacher}}</td>
                 <td>
-                    <audio src="{{sermon.audio_link_mp3}}" controls="controls" preload="none" style="width: 100%">
-
+                    <audio src="{{sermon.audio_link_mp3}}" controls typeof="audio/mp3" style="width: 100%">
+                        Your browser does not support the audio element.
                     </audio>
                 </td>
             </tr>
