--- a/view/contact.html
+++ b/view/contact.html
@@ -25,8 +25,8 @@
                             <input type="email" name="email-address" class="form-control" id="exampleInputEmail" placeholder=" Enter Email id" required>
                         </div>
                         <div class="form-group">
-                            <label for="telephone">Mobile No.</label>
-                            <input type="tel" class="form-control" id="telephone" placeholder=" Enter 10-digit mobile no.">
+                            <label for="telephoneNo">Mobile No</label>
+                            <input type="text" class="form-control" id="telephoneNo"  name="telephone" placeholder=" Enter mobile no" required>
                         </div>
                         <div>
                             <label for ="description"> Message</label>
