--- a/view/template/left-view-column.html
+++ b/view/template/left-view-column.html
@@ -9,11 +9,11 @@
             <tbody>
             <tr>
                 <td style="text-align: left">Sunday morning class  </td>
-                <td>11:00  am</td>
+                <td>10:30  am</td>
             </tr>
             <tr>
                 <td style="text-align: left">Sunday morning worship</td>
-                <td>12:00  pm</td>
+                <td>11:30  am</td>
             </tr>
             <!--<tr>-->
                 <!--<td style="text-align: left">Sunday evening service </td>-->
@@ -37,8 +37,10 @@
     <div flex>
         <br>
         <h4 class="section-header"><span class="content-header wow fadeIn " data-wow-delay="0.2s" data-wow-duration="2s"><a href="https://www.communitycentresuk.com/community-centres/parkside/" target="_blank"> We are here every sunday </a></span></h4>
-        <p><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2485.259124442865!2d-0.016390084892591247!3d51.47175777962929!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x487602628e28a2e7%3A0x3cb92d1e17f6e225!2sCopperwood+Pl%2C+Greenwich%2C+London+SE10+8GD!5e0!3m2!1sen!2suk!4v1518905859330"
-                   width="100%" height="300" frameborder="0" style="border:0" allowfullscreen></iframe></p>
+<!--        <p><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2485.259124442865!2d-0.016390084892591247!3d51.47175777962929!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x487602628e28a2e7%3A0x3cb92d1e17f6e225!2sCopperwood+Pl%2C+Greenwich%2C+London+SE10+8GD!5e0!3m2!1sen!2suk!4v1518905859330"-->
+<!--                   width="100%" height="300" frameborder="0" style="border:0" allowfullscreen></iframe></p>-->
+        <p><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2485.7036117657763!2d-0.018107984231637262!3d51.463597979627934!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x487602659506cb0b%3A0xb4c56d83d11f9df!2sPrendergast%20Vale%20School!5e0!3m2!1sen!2suk!4v1663485316516!5m2!1sen!2suk"
+                   width="100%" height="300"  style="border:2px;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></p>
     </div>
 
     <div flex  style="background: linear-gradient(to left, #FEF5E7, #ffffff); background: -webkit-linear-gradient(to left, #FEF5E7, #ffffff); text-align: left; padding: 5%">
